--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,3 +9,16 @@
 #redeviation-bs-indicator {
     display: none !important;
 }
+
+.rotate-device {
+    position: fixed;
+    inset: 0;
+    background: #000;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 9999;
+    user-select: none;
+}
